data/derived/comb/progs/unify/prog0334.ml.out
Characters 130-150:
  | h::t -> (((h*i)+i') mod 10)::(mulByDigit ((((h*i)+i')/10), t))
                                             ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
